add new feature: grade, log suspicious, update docs
