# internal/model/attemp.go
@@ -34,3 +34,12 @@ type Answer struct {
 	CreatedAt  time.Time `json:"createdAt" gorm:"autoCreateTime"`
 	UpdatedAt  time.Time `json:"updatedAt" gorm:"autoUpdateTime"`
 }
+
+type AttemptUpdateDTO struct {
+	Score    float64 `json:"score"`
+	Feedback string  `json:"feedback"`
+	Answers  []struct {
+		ID        uint `json:"id"`
+		IsCorrect bool `json:"isCorrect"`
+	}
+}
